Made navbar sticky, made logo head home and to the top of the page, fixed navbar item alignment

--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,4 +1,6 @@
 .navbar {
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,8 +12,8 @@
 
 .nav-right {
   display: flex;
-  align-items: flex-end;
-  gap: 5px;
+  align-items: center;
+  gap: 15px;
 }
 
 .burgermenu {
